[package]
name = "cli"
version = "0.1.0"
authors = ["Eric Freitag <eric@phylum.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = { version = "0.10.7", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "2.33", features = ["yaml"] }
hyper = "^0.13.2"
#hyper-tls = "^0.4.1"
hyper-rustls = "0.21.0"
futures = "^0.3"
env_logger = "0.7.1"
tokio = { version = "^0.2", features = ["full"] }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "1.0"
url = "2"
log = "^0.4.6"
base64 = "0.11"
uuid = { version = "0.8", features = ["serde", "v4"] }
yaml-rust = "0.4.4"
