[package]
name = "phylum-cli"
version = "6.6.5"
authors = ["Phylum, Inc. <engineering@phylum.io>"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.76.0"
autotests = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[features]
default = ["selfmanage"]
vulnreach = ["ignore", "vuln-reach", "vulnreach_types"]
selfmanage = []
end-to-end-tests = []

[dependencies]
anyhow = "1.0.44"
axum = "0.7.4"
base64 = "0.21.1"
birdcage = { version = "0.8.1" }
bytes = "1.1.0"
chrono = { version = "^0.4", default-features = false, features = ["serde", "clock"] }
cidr = "0.2.0"
clap = { version = "4.0.9", features = ["string", "wrap_help"] }
console = "0.15.2"
dashmap = "6.0.1"
deno_ast = { version = "0.38.1", features = ["transpiling"] }
deno_core = { version = "0.280.0" }
deno_runtime = { version = "0.159.0" }
dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
env_logger = "0.10.0"
futures = "^0.3"
git2 = "0.19.0"
git-version = "0.3.5"
home = "0.5.3"
ignore = { version = "0.4.20", optional = true }
lazy_static = "1.4.0"
libc = "0.2.135"
log = "0.4.6"
maplit = "1.0.2"
once_cell = "1.12.0"
open = "5.0.0"
phylum_lockfile = { path = "../lockfile", features = ["generator"] }
phylum_project = { path = "../phylum_project" }
phylum_types = { git = "https://github.com/phylum-dev/phylum-types", branch = "development" }
prettytable-rs = "0.10.0"
rand = "0.8.4"
regex = "1.5.5"
reqwest = { version = "0.11.3", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "rustls-tls-webpki-roots"], default-features = false }
rsa = { version = "0.9.2", features = ["sha2"] }
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.2"
sha2 = "0.10.2"
shellexpand = "3.0.0"
tempfile = "3.3.0"
textwrap = "0.16.0"
thiserror = "1.0.29"
tokio = { version = "^1.0", features = ["full"] }
toml = "0.7.4"
unicode-width = "0.1.9"
url = { version = "2", features = ["serde"] }
uuid = "1.4.1"
vuln-reach = { git = "https://github.com/phylum-dev/vuln-reach", optional = true }
vulnreach_types = { path = "../vulnreach_types", optional = true }
walkdir = "2.3.2"
zip = { version = "2.1.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = { version = "3.0", default-features = false, features = ["diff"] }
wiremock = "0.5.7"
