[package]
name = "phylum-cli"
version = "7.5.0"
authors = ["Veracode, Inc. <dl-phylum-engineering@veracode.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.85.0"
autotests = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[features]
default = ["selfmanage", "extensions"]
vulnreach = ["ignore", "vuln-reach", "vulnreach_types"]
extensions = ["dep:deno_ast", "dep:deno_core", "dep:deno_runtime"]
selfmanage = []
end-to-end-tests = ["extensions"]

[dependencies]
anyhow = "1.0.44"
axum = "0.7.4"
base64 = "0.22.1"
bytes = "1.1.0"
chrono = { version = "^0.4", default-features = false, features = [
  "serde",
  "clock",
] }
cidr = "0.3.0"
clap = { version = "4.0.9", features = ["string", "wrap_help"] }
console = "0.15.2"
dashmap = "6.0.1"
deno_ast = { version = "0.41.2", features = ["transpiling"], optional = true }
deno_core = { version = "0.307.0", optional = true }
deno_runtime = { version = "0.177.0", optional = true }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
env_logger = "0.11.6"
futures = "^0.3"
git2 = { version = "0.20.0", default-features = false }
git-version = "0.3.5"
home = "0.5.3"
ignore = { version = "0.4.20", optional = true }
indexmap = "2.7.0"
lazy_static = "1.4.0"
libc = "0.2.135"
log = "0.4.6"
maplit = "1.0.2"
once_cell = "1.12.0"
open = "5.0.0"
phylum_lockfile = { path = "../lockfile", features = ["generator"] }
phylum_project = { path = "../phylum_project" }
phylum_types = { git = "https://github.com/phylum-dev/phylum-types", branch = "development" }
prettytable-rs = "0.10.0"
purl = { version = "0.1.5", features = ["serde"] }
rand = "0.8.4"
regex = "1.5.5"
reqwest = { version = "0.12.7", features = [
  "blocking",
  "json",
  "rustls-tls",
  "rustls-tls-native-roots",
  "rustls-tls-webpki-roots",
], default-features = false }
rsa = { version = "0.9.2", features = ["sha2"] }
serde_json = "1.0.85"
# The derived `swc_ecma_ast` dependency will not compile with `serde` v1.0.220 or above.
# Ref: https://github.com/swc-project/swc/issues/11092
serde = { version = "=1.0.219", features = ["derive"] }
serde_yaml = "0.9.2"
sha2 = "0.10.2"
shellexpand = "3.0.0"
tempfile = "3.3.0"
textwrap = "0.16.0"
thiserror = "2.0.3"
tokio = { version = "^1.0", features = ["full"] }
tokio-util = "=0.7.15"
toml = "0.9.5"
unicode-width = "0.2.0"
url = { version = "2", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4"] }
vuln-reach = { git = "https://github.com/phylum-dev/vuln-reach", optional = true }
vulnreach_types = { path = "../vulnreach_types", optional = true }
walkdir = "2.3.2"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
birdcage = { version = "0.8.1" }

[target.'cfg(windows)'.dependencies]
# HACK: The Win32_Security feature is required by deno_io, but their crate didn't enable it
windows-sys = { version = "0.52.0", features = ["Win32_Security"] }
# HACK: The sysinfoapi feature is required by deno_node, but their crate didn't enable it
winapi = { version = "0.3.9", features = ["sysinfoapi"] }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = { version = "3.0", default-features = false, features = ["diff"] }
wiremock = "0.6.2"
