[package]
name = "phylum_lockfile"
description = "Package lock file parsers used by Phylum"
version = "0.1.0"
authors = ["Phylum, Inc. <engineering@phylum.io>"]
edition = "2021"
rust-version = "1.63.0"

[dependencies]
anyhow = "1.0.44"
ignore = "0.4.20"
lazy_static = "1.4.0"
log = "0.4.6"
nom = "7.1.1"
packageurl = "0.3.0"
phylum_types = { git = "https://github.com/phylum-dev/phylum-types", branch = "development" }
regex = "1.8.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.2"
serde-xml-rs = "0.5.1"
thiserror = "1.0.40"
toml = "0.5.8"
urlencoding = "2.1.2"
