[package]
name = "phylum_lockfile"
description = "Package lockfile parsers used by Phylum"
version = "0.1.0"
authors = ["Phylum, Inc. <engineering@phylum.io>"]
edition = "2021"
rust-version = "1.70.0"

[features]
default = []
generator = ["lockfile_generator"]

[dependencies]
anyhow = "1.0.44"
ignore = "0.4.20"
lockfile_generator = { path = "../lockfile_generator", optional = true }
log = "0.4.6"
nom = "7.1.1"
phylum_types = { git = "https://github.com/phylum-dev/phylum-types", branch = "development" }
purl = "0.1.1"
quick-xml = { version = "0.31.0", features = [
    "encoding",
    "overlapped-lists",
    "serialize",
] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.2"
thiserror = "1.0.40"
toml = "0.7.4"
urlencoding = "2.1.2"
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3.6.0"
