[package]
name = "lockfile_generator"
version = "0.1.0"
authors = ["Phylum, Inc. <engineering@phylum.io>"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.68.0"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.75"
glob = "0.3.1"
thiserror = "1.0.49"
tempfile = "3.3.0"
