[package]
name = "lockfile_generator"
version = "0.1.0"
authors = ["Veracode, Inc. <dl-phylum-engineering@veracode.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.75"
glob = "0.3.1"
thiserror = "2.0.3"
tempfile = "3.3.0"
dunce = "1.0.5"
