[package]
name = "phylum-parse"
description = "Parsers used by Phylum"
version = "0.1.0"
authors = ["Phylum, Inc. <engineering@phylum.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
log = "^0.4.6"
nom = "7.1.1"
phylum_types = { git = "https://github.com/phylum-dev/phylum-types", branch = "development" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.9.2"
serde-xml-rs = "0.5.1"
strum = { version = "0.24.1", features = ["derive"] }
toml = "0.5.8"
