[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.13", features = ["yaml"] }
clap_complete = "4.0.2"
home = "0.5.3"
log = "0.4.14"
simplelog = "0.12.0"
phylum-cli = { path = "../cli" }
fs_extra = "1.2.0"
