[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full-docs"]
# Enable any CLI features that change the available commands
full-docs = ["phylum-cli/selfmanage", "phylum-cli/extensions"]

[dependencies]
anyhow = "1.0.53"
clap = { version = "4.0.9", features = ["wrap_help"] }
clap_complete = "4.0.2"
home = "0.5.3"
log = "0.4.14"
simplelog = "0.12.0"
fs_extra = "1.2.0"
phylum-cli = { path = "../cli", default-features = false }
clap_markdown = { path = "../clap_markdown" }

[dev-dependencies]
tempfile = "3.3.0"
