[package]
name = "cli-python"
version = "0.0.7"
authors = ["Eric Freitag <eric@phylum.io>"]
edition = "2018"

[lib]
name = "cli_python"
crate-type = ["cdylib"]

[dependencies]
phylum-cli = { path = "../../lib" }
serde_json = "^1.0"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]

