[package]
name = "restson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "^0.14"
hyper-rustls = { git = "https://github.com/phylum-dev/hyper-rustls", branch = "master", features = ["webpki-roots", "rustls-native-certs"] }
rustls = { version = "0.19.1", features = ["dangerous_configuration"] }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "^1.0"
base64 = "0.11"
log = "^0.4.6"
tokio = { version = "^1.0", features = ["full"] }
url = { version = "2", features = ["serde"] }
